--- a/style.css
+++ b/style.css
@@ -1,9 +1,36 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{
     font-size: 50px;
 }
 .name-highlight{
     color: orange;
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding: 2%;
+}
+.half-width img{
+    width: 100%;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    margin: 10px 20px;
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+    background-image:linear-gradient(45deg,salmon,tomato)
+    
 }
