--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    color: dimgrey;
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -23,6 +26,7 @@ h1{
 }
 section{
     height: 500px;
+    padding-bottom: 150px;
 }
 .link-button{
     text-decoration: none;
@@ -33,4 +37,35 @@ section{
     font-weight: 700;
     background-image:linear-gradient(45deg,salmon,tomato)
     
+}
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 80%;
+    background-color: white;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,salmon,tomato);
+    border-image-slice: 1;
+    
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,blue,cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
